--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^7.12.1",
     "eslint-config-standard": "^16.0.3",
@@ -12,5 +13,8 @@
   },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "dev": "tsnd --transpile-only --respawn --ignore-watch node_modules src/server.ts"
   }
 }
